# silo-main

./: .gitignore  AUTHOR  CMakeLists.txt  LICENSE  README.md  cmake_install.cmake  silo-newc.7z
src/: CMakeLists.txt  cmake_install.cmake  silo  silo-newc  silo.c
src/circuit/: .circuit.c.swp  .circuit_io.c.swp  circuit.c  circuit_io.c
src/gate/: gate.c  signal.c
src/gate/alu/: gate_scalar.c
src/gate/cpu/: mips16.c
src/gate/scalar/: CMakeLists.txt  gate_scalar.c
src/include/: define.h  error.c  error.h  memalloc.c  memalloc.h  signal.c  signal.h  silostdlib.c  wire.h
src/include/circuit/: .circuit.h.swp  .circuit_io.h.swp  circuit.h  circuit_io.h  debug.txt
src/include/gate/: Gates.h  Memory.h  gate.h  signal.h
src/include/lib/: base.h
src/include/lib/alu/: gate_scalar.h
src/include/node/: node.h  node_type.h  recycle.h
src/include/simulator/: blueprint.h  simulation_types.h  simulator.h  simulator_in.h  thread.h
src/lib/: Clock.c  Gates.c  IO.c  Memory.c  base.c
src/lib/alu/: gate_scalar.c
src/node/: CMakeLists.txt  node.c  node_type.c  recycle.c
src/signal/: signal.c
src/simulator/: CMakeLists.txt  blueprint.c  simu_debug.c  simu_signal.c  simulator.c  simulator_main.c  simulator_thread.c  synthsizer.c  thread.c
